# hypo71py

./: README.md  __init__.py  pyproject.toml
.ipynb_checkpoints/: README-checkpoint.md
hypo71py.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
hypo71py/core/: __init__.py  azwtos.py  mp.py  single.py  swmreg.py  tinorm.py  trvdrv.py
hypo71py/core/.ipynb_checkpoints/: trvdrv-checkpoint.py
hypo71py/core/fortran/: H_param.f  __init__.py  azwtos.f  azwtos.pyf  hypo71.pyf  single.f  single_wrapper.py  swmreg.f  swmreg.pyf  swmreg_wrapper.py  tinorm.f  tinorm.pyf  trvdrv.f  trvdrv.pyf  trvdrv_wrapper.py
hypo71py/interface/: __init__.py  obspy.py
hypo71py/model/: __init__.py  simple_geotools.py  station_phase.py  time.py  type_check.py  velocity_model.py
notebooks/: hypo71.ipynb
notebooks/data/: ensemble_avg.csv  seisbench_cat.xml
notebooks/data/apollo_bay_metadata/: ABM1Y.xml  ABM2Y.xml  ABM3Y.xml  ABM4Y.xml  ABM5Y.xml  ABM6Y.xml  ABM7Y.xml  FRTM.xml  event_309.mseed
