[project]
name = "hypo71py"
version = "0.1.0"
description = "Python implementation of the HYPO71 earthquake location algorithm"
readme = "README.md"
requires-python = ">=3.9"

authors = [
    { name = "Kris Vanneste" },
    { name = "Dan Sandiford" }
]

dependencies = [
    "numpy",
    "scipy",
    "pandas",
    "obspy",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["hypo71py"]
